--- a/menu/appetizers+soup.html
+++ b/menu/appetizers+soup.html
@@ -4,7 +4,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" text="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet" text="text/css">
-
 	<link href="menustyles.css" rel="stylesheet" type="text/css">
 	<link href="../styles.css" rel="stylesheet" type="text/css">
 	<title>THE ORIENT</title>
@@ -13,12 +12,12 @@
 	<div class="menu-nav">
 		<div class="nav-item">
 			<a class="nav-icon" href="../index.html"
-				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+				style="background-image: url('../res/icons/svg/005-restaurant.svg')">
 			</a>
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
 		<div class="nav-item">
-			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../res/icons/svg/003-phone-with-message.svg')">
 			</a>
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
@@ -56,42 +55,68 @@
 		</ul>
 	</div>
 	<div class="menu title">
-		<p> SIDES + SAUCES </p>
+		<p> APPETIZERS + SOUP </p>
 	</div>
 	<div class="contentAS">
 		<section class="content">
-			<h1> SIDES </h1>
+			<h1> APPETIZERS </h1>
 			<div class="column">
-				<div class="last item splitter">
-					<p>CHICKEN FINGERS &amp; FRIES <span>$8.00</span></p>
-					<p class="desc"> chicken fingers on a bed of fries, with a side of sweet &amp; sour sauce </p>
+				<div class="item">
+					<p>POT STICKERS &nbsp;[6] <span>$5.95</span></p>
+					<p class="desc">pan-fried pork and vegetable dumplings</p>
+				</div>
+				<div class="item">
+					<p>FRESH DRY SPARERIBS <span>$7.95</span></p>
+					<p class="desc">fried spareribs seasoned lightly with garlic salt</p>
+				</div>
+				<div class="last item">
+					<p>DEEP FRIED WON TON <span>$7.95</span></p>
+					<p class="desc">fried won tons with a side of sweet &amp; sour sauce</p>
 				</div>
 			</div>
-
 			<div class="column">
+				<div class="item">
+					<p>SPRING ROLL &nbsp;[1] <span>$2.50</span></p>
+					<p class="desc">house-made pork &amp; vegetable spring roll</p>
+				</div>
 				<div class="last item">
-				<p>FRENCH FRIES <span>$4.25</span></p>
-				<p class="desc"> just a side order of fries! :) </p>
+					<p>COMBO PLATTER <span>$16.95</span></p>
+					<p class="desc">a platter of assorted fried delights. <br><br>includes dry ribs + chicken wings + spring rolls + deep fried prawns + deep fried chicken balls </p>
 				</div>
 			</div>
 		</section>
-
 		<section class="content">
-			<h1> SAUCES </h1>
+			<h1> SOUPS </h1>
 			<div class="column">
 				<div class="item">
-					<p>SWEET &amp; SOUR SAUCE <span>$2.00</span></p>
+					<p>WON TON SOUP <span>$3.95/single &nbsp; &nbsp; $9/bowl</span>
+					</p>
+					<p class="desc">home-made pork won tons in a light broth</p>
+				</div>
+				<div class="item">
+					<p>HOUSE WOR WON TON SOUP <span>$15.50</span></p>
+					<p class="desc">won ton soup topped with an assorted stir-fried meats and vegetables</p>
 				</div>
 				<div class="last item">
-					<p>LEMON SAUCE <span>$2.00</span></p>
+					<p>HOT &amp; SOUR SOUP <span>$5/single &nbsp; &nbsp; $10/bowl</span></p>
+					<p class="desc">a unique hot &amp; sour soup with assorted meats and vegetables, perfect for a chilly day </p>
 				</div>
 			</div>
 			<div class="column">
 				<div class="item">
-					<p>CURRY SAUCE <span>$2.00</span></p>
+					<p>NOODLE SOUP <span>$9.00</span></p>
+					<p class="desc"><strong>choose one: BEEF / CHICKEN / PORK / VEGETARIAN</strong>
+					<br><br>
+					egg noodles + your choice of topping + soup </p>
+				</div>
+				<div class="item">
+					<p>WON TON NOODLE SOUP <span>$9.00</span></p>
+					<p class="desc">egg noodles + won tons + soup </p>
 				</div>
 				<div class="last item">
-					<p>BLACK BEAN SAUCE <span>$2.00</span></p>
+					<p>CHICKEN &amp; CREAM CORN SOUP <span>$10/regular &nbsp; &nbsp; $12.5/large</span></p>
+					<p class="desc">a chicken and corn soup finished with an egg swirl</p>
+				</div>
 			</div>
 		</section>
 	</div>
@@ -107,5 +132,4 @@
 	<div class="finalnote" >
 		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
-
 </body>
