--- a/menu/chopsuey+eggfooyung.html
+++ b/menu/chopsuey+eggfooyung.html
@@ -7,19 +7,18 @@
 
 	<link href="menustyles.css" rel="stylesheet" type="text/css">
 	<link href="../styles.css" rel="stylesheet" type="text/css">
-	<script src="loose-scripts.js"></script>
 	<title>THE ORIENT</title>
 </head>
 <body>
 	<div class="menu-nav">
 		<div class="nav-item">
 			<a class="nav-icon" href="../index.html"
-				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+				style="background-image: url('../res/icons/svg/005-restaurant.svg')">
 			</a>
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
 		<div class="nav-item">
-			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../res/icons/svg/003-phone-with-message.svg')">
 			</a>
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
@@ -27,7 +26,7 @@
 		</div>
 	</div>
 	<div id="main">
-		<p>[ COMBOS ]</p>
+		<p>[ MAIN ]</p>
 		<h1 style="color: #FFAF35;">MENU</h1>
 	</div>
 	<div class="menu">
@@ -56,50 +55,72 @@
 				<li> SIDES + SAUCES </li></a>
 		</ul>
 	</div>
+	<div class="menu title">
+		<p> CHOP SUEY + EGG FOO YUNG </p>
+	</div>
 	<div class="contentAS">
 		<section class="content">
-			<h1> COMBOS FOR ONE </h1>
+			<h1> CHOP SUEY </h1>
 			<div class="column">
 				<div class="item">
-					<p>[ # 01 ] <span>$12.50</span></p>
-					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; DEEP FRIED PRAWNS</p>
+					<p>HOUSE SPECIAL CHOP SUEY <span>$12.95</span></p>
+					<p class="desc"> stir-fried mixed veggies with shrimp, pork, and chicken </p>
 				</div>
 				<div class="item">
-					<p>[ # 02 ] <span>$12.50</span></p>
-					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; ALMOND CHICKEN </p>
+					<p>CHOP SUEY <span>$10.95</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / MUSHROOM / PORK / SHRIMP / VEGGIE </strong> <br><br>
+					stir-fried mixed veggies + topping of choice </p>
 				</div>
 				<div class="item">
-					<p>[ # 03 ] <span>$12.50</span></p>
-					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; CHICKEN FRIED RICE </p>
+					<p>BEEF CHOW BROCOLLI <span>$11.50</span></p>
+					<p class="desc">stir-fried brocolli and beef, with carrots and onions. a popular classic </p>
 				</div>
 				<div class="last item">
-					<p>[ # 04 ] <span>$12.50</span></p>
-					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; BEEF CHOP SUEY </p>
+					<p> BEEF &amp; GREEN PEPPERS w/ BLACK BEAN SAUCE <span>$11.50</span></p>
+					<p class="desc">beef + green peppers stir-fried with carrots and onions in a black bean sauce </p>
 				</div>
 			</div>
 
 			<div class="column">
 				<div class="item">
-					<p>[ # 05 ] &nbsp; &nbsp; VEGGIE COMBO <span>$12.50</span></p>
-					<p class="desc">VEGGIE FRIED RICE &nbsp;<b>+</b>&nbsp; MUSHROOM CHOP SUEY &nbsp;<b>+</b>&nbsp; MUCHROOM CHOW MEIN </p>
+					<p>TOMATO SAUCE CHOP SUEY <span>$12.50</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP </strong> <br><br>
+					stir-fried mixed veggies + topping of choice + tomato sauce </p>
 				</div>
 				<div class="item">
-					<p>[ # 06 ] &nbsp; &nbsp; COMBO KING <span>$14.95</span></p>
-					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; BEEF CHOP SUEY &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; DEEP FRIED PRAWNS </p>
+					<p>CURRY SAUCE CHOP SUEY <span>$12.50</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP </strong> <br><br>
+					stir fried mixed veggies + topping of choice + curry sauce </p>
 				</div>
 				<div class="item">
-					<p>[ # 07 ] &nbsp; &nbsp; HOUSE COMBO A <span>$13.95</span></p>
-					<p class="desc">HOUSE SPECIAL CHOP SUEY &nbsp;<b>+</b>&nbsp; CHICKEN FRIED RICE &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR CHICKEN BALLS 
-					</p>
+					<p> STIR-FRIED SNOW PEAS <span>$12.95</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP / SQUID </strong> <br><br>
+					stif-fried snow peas + topping of choice + assorted veggies </p>
 				</div>
 				<div class="last item">
-					<p>[ # 08 ] &nbsp; &nbsp; HOUSE COMBO B <span>$14.95</span></p>
-					<p class="desc">HOUSE SPECIAL CHOP SUEY &nbsp;<b>+</b>&nbsp; HOUSE SPECIAL FRIED RICE &nbsp;<b>+</b>&nbsp; GINGER BEEF </p>
+					<p>ALMOND GAI DING <span>$12.95</span></p>
+					<p class="desc">stir-fried diced chicken with almonds and assorted veggies</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="content">
+			<h1> EGG FOO YUNG </h1>
+
+			<div class="column">
+				<div class="last item splitter">
+					<p>HOUSE SPECIAL EGG FOO YUNG <span>$12.95</span></p>
+					<p class="desc">pan-fried egg pancakes with shrimp, pork, chicken, and assorted veggies </p>
+				</div>
+			</div>
+			<div class="column">
+				<div class="last item" >
+					<p>EGG FOO YUNG <span>$10.95</span></p>
+					<p class="desc">pan-fried egg pancake + topping of choice </p>
 				</div>
 			</div>
 		</section>
 	</div>
-	<p id="etc">[ &nbsp; *** ask us about substitutions! *** &nbsp; ]</p>
 	<div class="footer menu" style="margin-top: 40px;">
 		<ul>
 			<a href="../index.html"><li>HOME</li></a>
