--- a/menu/combos.html
+++ b/menu/combos.html
@@ -4,6 +4,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" text="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet" text="text/css">
+
 	<link href="menustyles.css" rel="stylesheet" type="text/css">
 	<link href="../styles.css" rel="stylesheet" type="text/css">
 	<title>THE ORIENT</title>
@@ -12,12 +13,12 @@
 	<div class="menu-nav">
 		<div class="nav-item">
 			<a class="nav-icon" href="../index.html"
-				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+				style="background-image: url('../res/icons/svg/005-restaurant.svg')">
 			</a>
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
 		<div class="nav-item">
-			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../res/icons/svg/003-phone-with-message.svg')">
 			</a>
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
@@ -25,7 +26,7 @@
 		</div>
 	</div>
 	<div id="main">
-		<p>[ MAIN ]</p>
+		<p>[ COMBOS ]</p>
 		<h1 style="color: #FFAF35;">MENU</h1>
 	</div>
 	<div class="menu">
@@ -54,72 +55,50 @@
 				<li> SIDES + SAUCES </li></a>
 		</ul>
 	</div>
-	<div class="menu title">
-		<p> APPETIZERS + SOUP </p>
-	</div>
 	<div class="contentAS">
 		<section class="content">
-			<h1> APPETIZERS </h1>
+			<h1> COMBOS FOR ONE </h1>
 			<div class="column">
 				<div class="item">
-					<p>POT STICKERS &nbsp;[6] <span>$5.95</span></p>
-					<p class="desc">pan-fried pork and vegetable dumplings</p>
+					<p>[ # 01 ] <span>$12.50</span></p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; DEEP FRIED PRAWNS</p>
 				</div>
 				<div class="item">
-					<p>FRESH DRY SPARERIBS <span>$7.95</span></p>
-					<p class="desc">fried spareribs seasoned lightly with garlic salt</p>
+					<p>[ # 02 ] <span>$12.50</span></p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; ALMOND CHICKEN </p>
+				</div>
+				<div class="item">
+					<p>[ # 03 ] <span>$12.50</span></p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; CHICKEN FRIED RICE </p>
 				</div>
 				<div class="last item">
-					<p>DEEP FRIED WON TON <span>$7.95</span></p>
-					<p class="desc">fried won tons with a side of sweet &amp; sour sauce</p>
+					<p>[ # 04 ] <span>$12.50</span></p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; BEEF CHOP SUEY </p>
 				</div>
 			</div>
+
 			<div class="column">
 				<div class="item">
-					<p>SPRING ROLL &nbsp;[1] <span>$2.50</span></p>
-					<p class="desc">house-made pork &amp; vegetable spring roll</p>
+					<p>[ # 05 ] &nbsp; &nbsp; VEGGIE COMBO <span>$12.50</span></p>
+					<p class="desc">VEGGIE FRIED RICE &nbsp;<b>+</b>&nbsp; MUSHROOM CHOP SUEY &nbsp;<b>+</b>&nbsp; MUCHROOM CHOW MEIN </p>
 				</div>
-				<div class="last item">
-					<p>COMBO PLATTER <span>$16.95</span></p>
-					<p class="desc">a platter of assorted fried delights. <br><br>includes dry ribs + chicken wings + spring rolls + deep fried prawns + deep fried chicken balls </p>
-				</div>
-			</div>
-		</section>
-		<section class="content">
-			<h1> SOUPS </h1>
-			<div class="column">
 				<div class="item">
-					<p>WON TON SOUP <span>$3.95/single &nbsp; &nbsp; $9/bowl</span>
+					<p>[ # 06 ] &nbsp; &nbsp; COMBO KING <span>$14.95</span></p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; BEEF CHOP SUEY &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; DEEP FRIED PRAWNS </p>
+				</div>
+				<div class="item">
+					<p>[ # 07 ] &nbsp; &nbsp; HOUSE COMBO A <span>$13.95</span></p>
+					<p class="desc">HOUSE SPECIAL CHOP SUEY &nbsp;<b>+</b>&nbsp; CHICKEN FRIED RICE &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR CHICKEN BALLS 
 					</p>
-					<p class="desc">home-made pork won tons in a light broth</p>
-				</div>
-				<div class="item">
-					<p>HOUSE WOR WON TON SOUP <span>$15.50</span></p>
-					<p class="desc">won ton soup topped with an assorted stir-fried meats and vegetables</p>
 				</div>
 				<div class="last item">
-					<p>HOT &amp; SOUR SOUP <span>$5/single &nbsp; &nbsp; $10/bowl</span></p>
-					<p class="desc">a unique hot &amp; sour soup with assorted meats and vegetables, perfect for a chilly day </p>
-				</div>
-			</div>
-			<div class="column">
-				<div class="item">
-					<p>NOODLE SOUP <span>$9.00</span></p>
-					<p class="desc"><strong>choose one: BEEF / CHICKEN / PORK / VEGETARIAN</strong>
-					<br><br>
-					egg noodles + your choice of topping + soup </p>
-				</div>
-				<div class="item">
-					<p>WON TON NOODLE SOUP <span>$9.00</span></p>
-					<p class="desc">egg noodles + won tons + soup </p>
-				</div>
-				<div class="last item">
-					<p>CHICKEN &amp; CREAM CORN SOUP <span>$10/regular &nbsp; &nbsp; $12.5/large</span></p>
-					<p class="desc">a chicken and corn soup finished with an egg swirl</p>
+					<p>[ # 08 ] &nbsp; &nbsp; HOUSE COMBO B <span>$14.95</span></p>
+					<p class="desc">HOUSE SPECIAL CHOP SUEY &nbsp;<b>+</b>&nbsp; HOUSE SPECIAL FRIED RICE &nbsp;<b>+</b>&nbsp; GINGER BEEF </p>
 				</div>
 			</div>
 		</section>
 	</div>
+	<p id="etc">[ &nbsp; *** ask us about substitutions! *** &nbsp; ]</p>
 	<div class="footer menu" style="margin-top: 40px;">
 		<ul>
 			<a href="../index.html"><li>HOME</li></a>
