--- a/menu/familydinners.html
+++ b/menu/familydinners.html
@@ -13,12 +13,12 @@
 	<div class="menu-nav">
 		<div class="nav-item">
 			<a class="nav-icon" href="../index.html"
-				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+				style="background-image: url('../res/icons/svg/005-restaurant.svg')">
 			</a>
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
 		<div class="nav-item">
-			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../res/icons/svg/003-phone-with-message.svg')">
 			</a>
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
