--- a/menu/friedrice+chowmein.html
+++ b/menu/friedrice+chowmein.html
@@ -14,12 +14,12 @@
 	<div class="menu-nav">
 		<div class="nav-item">
 			<a class="nav-icon" href="../index.html"
-				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+				style="background-image: url('../res/icons/svg/005-restaurant.svg')">
 			</a>
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
 		<div class="nav-item">
-			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../res/icons/svg/003-phone-with-message.svg')">
 			</a>
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
@@ -57,83 +57,76 @@
 		</ul>
 	</div>
 	<div class="menu title">
-		<p> PORK + CHICKEN </p>
+		<p> FRIED RICE + CHOW MEIN </p>
 	</div>
 	<div class="contentAS">
 		<section class="content">
-			<h1> PORK </h1>
-
+			<h1> FRIED RICE </h1>
 			<div class="column">
 				<div class="item">
-					<p>SWEET &amp; SOUR PORK <span>$11.50</span></p>
-					<p class="desc">fried boneless pork with our made-from-scratch sweet &amp; sour sauce </p>
+					<p>HOUSE SPECIAL FRIED RICE <span>$12.95</span></p>
+					<p class="desc">fried rice with shrimp, pork, chicken, and assorted veggies</p>
 				</div>
 				<div class="item">
-					<p>DRY GARLIC PORK <span>$11.50</span></p>
-					<p class="desc"> fried boneless pork lightly seasoned with garlic salt </p>
-				</div>
-				<div class="item">
-					<p>HONEY &amp; GARLIC PORK <span>$11.95</span></p>
-					<p class="desc"> fried boneless pork with our secret honey-garlic sauce </p>
+					<p>FRIED RICE <span>$10.95</span></p>
+					<p class="desc"><strong>choose one: BEEF / CHICKEN / MUSHROOM / PORK / SHRIMP / VEGGIE </strong> <br><br>
+					fried rice + topping of your choice + assorted veggies</p>
 				</div>
 				<div class="last item">
-					<p>BBQ PORK [ sliced ] <span>$11.95</span></p>
-					<p class="desc"> slow-roasted marinated pork topped off with a light sweet glaze </p>
+					<p>STEAMED RICE <span>$2/small &nbsp; &nbsp; $4.5/large</span></p>
 				</div>
 			</div>
-
 			<div class="column">
 				<div class="item">
-					<p>SWEET &amp; SOUR SPARERIBS <span>$11.50</span></p>
-					<p class="desc"> fried pork spareribs with our made-from-scratch sweet &amp; sour sauce </p>
-				</div>
-				<div class="item">
-					<p>DRY GARLIC SPARERIBS <span>$11.50</span></p>
-					<p class="desc">fried pork spareribs lightly seasoned with garlic salt</p>
+					<p>TOMATO FRIED RICE <span>$12.50</span></p>
+					<p class="desc"><strong>choose one: BEEF / CHICKEN / SHRIMP
+					</strong> <br><br>
+					fried rice + topping of your choice + assorted veggies + tomato sauce</p>
 				</div>
 				<div class="last item">
-					<p>HONEY &amp; GARLIC SPARERIBS <span>$11.95</span></p>
-					<p class="desc">fried pork spareribs with our secret honey-garlic sauce</p>
+					<p>CURRY SAUCE FRIED RICE <span>$12.50</span></p>
+					<p class="desc"><strong>choose one: BEEF / CHICKEN / SHRIMP
+					</strong> <br><br>
+					fried rice + topping of your choice + assorted veggies + curry sauce</p>
 				</div>
 			</div>
 		</section>
-
 		<section class="content">
-			<h1> CHICKEN </h1>
+			<h1> CHOW MEIN</h1> 
 			<div class="column">
 				<div class="item">
-					<p>DEEP FRIED ALMOND CHICKEN <span>$11.50</span></p>
-					<p class="desc">deep-fried chicken breasts sprinkled with a dry sweet almond topping </p>
+					<p>HOUSE SPECIAL CHOW MEIN <span>$12.95</span></p>
+					<p class="desc"> chow mein topped with shrimp, pork, chicken, and assorted veggies</p>
 				</div>
 				<div class="item">
-					<p>SWEET &amp; SOUR CHICKEN BALLS <span>$12.50</span></p>
-					<p class="desc">deep-fried chicken cubes paired with our made-from-scratch sweet &amp; sour sauce </p>
-				</div>
-				<div class="item">
-					<p>STIR-FRIED CHICKEN &amp; VEGETABLES <span>$12.50</span></p>
-					<p class="desc"><strong> choose one: BLACK BEAN SAUCE / CURRY SAUCE </strong> <br><br>
-					stir-fried diced chicken + your choice of sauce + assorted vegetables </p>
+					<p>CHOW MEIN <span>$10.95</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / MUSHROOM / PORK / SHRIMP / VEGGIE </strong> <br><br>
+					chow mein + topping of your choice + assorted veggies
+					</p>
 				</div>
 				<div class="last item">
-					<p>HONEY GARLIC SEASAME CHICKEN <span>$13.95</span></p>
-					<p class="desc"> deep-fried diced chicken paired with our secret honey-garlic sauce and spinkled with seasame</p>
+					<p>TOMATO SAUCE CHOW MEIN <span>$12.50</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP
+					</strong> <br><br>
+					chow mein + topping of your choice + assorted veggies + tomato sauce </p>
 				</div>
 			</div>
-
 			<div class="column">
 				<div class="item">
-					<p>DEEP FRIED CHICKEN WINGS <span>$11.50</span></p>
-					<p class="desc"> chicken wings coated with our uniquely seasoned batter and deep-fried </p>
+					<p>CANTONESE-STYLE CHOW MEIN [ crispy ] <span>$13.50</span></p>
+					<p class="desc"> crispy chow mein topped with stir-fried shrimp, pork, chicken, and assorted diced vegetables </p>
 				</div>
 				<div class="item">
-					<p>HONEY GARLIC CHICKEN WINGS <span>$11.95</span></p>
-					<p class="desc"> our classic chicken wings topped off with a sweet honey-garlic sauce</p>
+					<p>CHINESE-STYLE CHOW MEIN [ crispy ] <span>$13.50</span></p>
+					<p class="desc"> crispy chow mein topped with stir-fried shrimp, pork, chicken, shitake mushrooms, and assorted julienned vegetables </p>
+				</div>
+				<div class="item">
+					<p>SHANGHAI NOODLES <span>$12.50</span></p>
+					<p class="desc"> stir-fried shanghai noodles with chicken and assorted veggies </p>
 				</div>
 				<div class="last item">
-					<p>HOT &amp; SPICY CHICKEN WINGS <span>$11.95</span></p>
-					<p class="desc"> our classic chicken wings seasoned with hot chilis and topped off with peppers and onions </p>
+					<p>PLAIN CHOW MEIN <span>$3/small &nbsp; &nbsp; $6.5/large</span></p>
 				</div>
-				
 			</div>
 		</section>
 	</div>
@@ -146,7 +139,7 @@
 			<a href="../note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
-	<div class="finalnote" >
+	<div class="finalnote">
 		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
 </body>
