--- a/menu/pork+chicken.html
+++ b/menu/pork+chicken.html
@@ -7,18 +7,19 @@
 
 	<link href="menustyles.css" rel="stylesheet" type="text/css">
 	<link href="../styles.css" rel="stylesheet" type="text/css">
+	<script src="loose-scripts.js"></script>
 	<title>THE ORIENT</title>
 </head>
 <body>
 	<div class="menu-nav">
 		<div class="nav-item">
 			<a class="nav-icon" href="../index.html"
-				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+				style="background-image: url('../res/icons/svg/005-restaurant.svg')">
 			</a>
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
 		<div class="nav-item">
-			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../res/icons/svg/003-phone-with-message.svg')">
 			</a>
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
@@ -56,68 +57,83 @@
 		</ul>
 	</div>
 	<div class="menu title">
-		<p> CHOP SUEY + EGG FOO YUNG </p>
+		<p> PORK + CHICKEN </p>
 	</div>
 	<div class="contentAS">
 		<section class="content">
-			<h1> CHOP SUEY </h1>
+			<h1> PORK </h1>
+
 			<div class="column">
 				<div class="item">
-					<p>HOUSE SPECIAL CHOP SUEY <span>$12.95</span></p>
-					<p class="desc"> stir-fried mixed veggies with shrimp, pork, and chicken </p>
+					<p>SWEET &amp; SOUR PORK <span>$11.50</span></p>
+					<p class="desc">fried boneless pork with our made-from-scratch sweet &amp; sour sauce </p>
 				</div>
 				<div class="item">
-					<p>CHOP SUEY <span>$10.95</span></p>
-					<p class="desc"><strong> choose one: BEEF / CHICKEN / MUSHROOM / PORK / SHRIMP / VEGGIE </strong> <br><br>
-					stir-fried mixed veggies + topping of choice </p>
+					<p>DRY GARLIC PORK <span>$11.50</span></p>
+					<p class="desc"> fried boneless pork lightly seasoned with garlic salt </p>
 				</div>
 				<div class="item">
-					<p>BEEF CHOW BROCOLLI <span>$11.50</span></p>
-					<p class="desc">stir-fried brocolli and beef, with carrots and onions. a popular classic </p>
+					<p>HONEY &amp; GARLIC PORK <span>$11.95</span></p>
+					<p class="desc"> fried boneless pork with our secret honey-garlic sauce </p>
 				</div>
 				<div class="last item">
-					<p> BEEF &amp; GREEN PEPPERS w/ BLACK BEAN SAUCE <span>$11.50</span></p>
-					<p class="desc">beef + green peppers stir-fried with carrots and onions in a black bean sauce </p>
+					<p>BBQ PORK [ sliced ] <span>$11.95</span></p>
+					<p class="desc"> slow-roasted marinated pork topped off with a light sweet glaze </p>
 				</div>
 			</div>
 
 			<div class="column">
 				<div class="item">
-					<p>TOMATO SAUCE CHOP SUEY <span>$12.50</span></p>
-					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP </strong> <br><br>
-					stir-fried mixed veggies + topping of choice + tomato sauce </p>
+					<p>SWEET &amp; SOUR SPARERIBS <span>$11.50</span></p>
+					<p class="desc"> fried pork spareribs with our made-from-scratch sweet &amp; sour sauce </p>
 				</div>
 				<div class="item">
-					<p>CURRY SAUCE CHOP SUEY <span>$12.50</span></p>
-					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP </strong> <br><br>
-					stir fried mixed veggies + topping of choice + curry sauce </p>
-				</div>
-				<div class="item">
-					<p> STIR-FRIED SNOW PEAS <span>$12.95</span></p>
-					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP / SQUID </strong> <br><br>
-					stif-fried snow peas + topping of choice + assorted veggies </p>
+					<p>DRY GARLIC SPARERIBS <span>$11.50</span></p>
+					<p class="desc">fried pork spareribs lightly seasoned with garlic salt</p>
 				</div>
 				<div class="last item">
-					<p>ALMOND GAI DING <span>$12.95</span></p>
-					<p class="desc">stir-fried diced chicken with almonds and assorted veggies</p>
+					<p>HONEY &amp; GARLIC SPARERIBS <span>$11.95</span></p>
+					<p class="desc">fried pork spareribs with our secret honey-garlic sauce</p>
 				</div>
 			</div>
 		</section>
 
 		<section class="content">
-			<h1> EGG FOO YUNG </h1>
-
+			<h1> CHICKEN </h1>
 			<div class="column">
-				<div class="last item splitter">
-					<p>HOUSE SPECIAL EGG FOO YUNG <span>$12.95</span></p>
-					<p class="desc">pan-fried egg pancakes with shrimp, pork, chicken, and assorted veggies </p>
+				<div class="item">
+					<p>DEEP FRIED ALMOND CHICKEN <span>$11.50</span></p>
+					<p class="desc">deep-fried chicken breasts sprinkled with a dry sweet almond topping </p>
+				</div>
+				<div class="item">
+					<p>SWEET &amp; SOUR CHICKEN BALLS <span>$12.50</span></p>
+					<p class="desc">deep-fried chicken cubes paired with our made-from-scratch sweet &amp; sour sauce </p>
+				</div>
+				<div class="item">
+					<p>STIR-FRIED CHICKEN &amp; VEGETABLES <span>$12.50</span></p>
+					<p class="desc"><strong> choose one: BLACK BEAN SAUCE / CURRY SAUCE </strong> <br><br>
+					stir-fried diced chicken + your choice of sauce + assorted vegetables </p>
+				</div>
+				<div class="last item">
+					<p>HONEY GARLIC SEASAME CHICKEN <span>$13.95</span></p>
+					<p class="desc"> deep-fried diced chicken paired with our secret honey-garlic sauce and spinkled with seasame</p>
 				</div>
 			</div>
+
 			<div class="column">
-				<div class="last item" >
-					<p>EGG FOO YUNG <span>$10.95</span></p>
-					<p class="desc">pan-fried egg pancake + topping of choice </p>
+				<div class="item">
+					<p>DEEP FRIED CHICKEN WINGS <span>$11.50</span></p>
+					<p class="desc"> chicken wings coated with our uniquely seasoned batter and deep-fried </p>
 				</div>
+				<div class="item">
+					<p>HONEY GARLIC CHICKEN WINGS <span>$11.95</span></p>
+					<p class="desc"> our classic chicken wings topped off with a sweet honey-garlic sauce</p>
+				</div>
+				<div class="last item">
+					<p>HOT &amp; SPICY CHICKEN WINGS <span>$11.95</span></p>
+					<p class="desc"> our classic chicken wings seasoned with hot chilis and topped off with peppers and onions </p>
+				</div>
+				
 			</div>
 		</section>
 	</div>
