--- a/nonafternote.html
+++ b/nonafternote.html
@@ -23,10 +23,10 @@
 		</ul>
 	</div>
 	<div class="forminfo">
-		<div class="service-icon" style="background-image: url('../res/icons/svg/020-notepad-1.svg')">
+		<div class="service-icon" style="background-image: url('res/icons/svg/020-notepad-1.svg')">
 		</div>
 		<div class="title">
-			<p>HELLO AGAIN</p>
+			<p><b>ERROR!</b> PLEASE TRY AGAIN!</p>
 		</div>
 		<p>
 		this is the place to send us a quick anonymous note regarding almost anything.<br>
