--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	</div>
 	<div class="services">
 		<div class="service-card" id="first-card" style="order: 1;">
-			<div class="service-icon" style="background-image: url('../res/icons/svg/013-noodles.svg')">
+			<div class="service-icon" style="background-image: url('res/icons/svg/013-noodles.svg')">
 			</div>
 			<h1> LUNCH </h1>
 			<p>Lunch service from <b>opening to 2pm</b> every day! Make your own combo from a am exciting list of entrees!</p>
@@ -50,7 +50,7 @@
 			</form>
 		</div>
 		<div class="service-card" style="order: 2">
-			<div class="service-icon" style="background-image: url('../res/icons/svg/010-take-away.svg')">
+			<div class="service-icon" style="background-image: url('res/icons/svg/010-take-away.svg')">
 			</div>
 			<h1> TAKE-OUT </h1>
 			<p><b>10% off on ALL ORDERS over $25, yay!</b> Check out menu and take some of that lovely lovely food home!</p>
@@ -59,7 +59,7 @@
 			</form>
 		</div>
 		<div class="service-card" style="order: 3">
-			<div class="service-icon" style="background-image: url('../res/icons/svg/002-delivery-1.svg'); 
+			<div class="service-icon" style="background-image: url('res/icons/svg/002-delivery-1.svg'); 
 			 background-size: 58px;">
 			 </div>
 			<h1> DELIVERY </h1>
