fixed an item description; minor spacing change

--- a/menu/seafood+specialties.html
+++ b/menu/seafood+specialties.html
@@ -98,7 +98,7 @@
 			<div class="column">
 				<div class="item">
 					<p> PHOENIX IN A NEST <span>$14.95</span></p>
-					<p class="desc"> a stir-fry of BBQ pork, chicken, and assorted veggies on top a fried potato-hash nest </p>
+					<p class="desc"> a stir-fry of chicken and assorted veggies on top a fried potato-hash nest </p>
 				</div>
 				<div class="item">
 					<p> MOO GOO GAI PAI <span>$13.95</span></p>
