--- a/menu/chopsuey+eggfooyung.html
+++ b/menu/chopsuey+eggfooyung.html
@@ -104,7 +104,7 @@
 			</div>
 		</section>
 
-		<section class="content">
+		<section class="content" style="margin-top: 110px;">
 			<h1> EGG FOO YUNG </h1>
 
 			<div class="column">
