fixed minor styling issues

--- a/menu/seafood+specialties.html
+++ b/menu/seafood+specialties.html
@@ -130,8 +130,12 @@
 					<p class="desc"> a savoury stir-fry of chicken or shrimp and assorted veggies, topped with cashew nuts </p>
 				</div>
 				<div class="item">
-					<p> MONGOLIAN BEEF &nbsp;[ HOT ] <span>$13.95</span></p>
-					<p class="desc"> an unique and saucy stir-fry featuring tender sliced beef, mushrooms, green peppers and onions in a hot &amp; spicy sauce. <br><br> *served on a sizzling plate </p>
+					<p> MA PO TOFU with MINCED BEEF <span>$12.95</span></p>
+					<p class="desc"> tofu braised with minced beef, assorted peppers, and onions in a spicy bean sauce </p>
+				</div>
+				<div class="item">
+					<p> KULU CHICKEN or PORK <span>$13.95</span></p>
+					<p class="desc"> fried boneless diced chicken or pork with pineapple, peppers, and green onions in a sweet &amp; spicy sauce </p>
 				</div>
 				<div class="last item">
 					<p> SZECHUAN BEEF or CHICKEN <span>$13.95</span></p>
@@ -172,18 +176,14 @@
 					<p> SEAFOOD with TOFU HOT POT <span>$12.95</span></p>
 					<p class="desc"> cubed tofu stif-fried with scallops, shrimp, squid, and assorted veggies. <br><br> *served in a sizzling hot pot </p>
 				</div>
-				<div class="item">
-					<p> MA PO TOFU with MINCED BEEF <span>$12.95</span></p>
-					<p class="desc"> tofu braised with minced beef, assorted peppers, and onions in a spicy bean sauce </p>
-				</div>
 				<div class="last item">
-					<p> KULU CHICKEN or PORK <span>$13.95</span></p>
-					<p class="desc"> fried boneless diced chicken or pork with pineapple, peppers, and green onions in a sweet &amp; spicy sauce </p>
+					<p> MONGOLIAN BEEF &nbsp;[ HOT ] <span>$13.95</span></p>
+					<p class="desc"> an unique and saucy stir-fry featuring tender sliced beef, mushrooms, green peppers and onions in a hot &amp; spicy sauce. <br><br> *served on a sizzling plate </p>
 				</div>
 			</div>
 		</section>
 	</div>
-	<div class="footer menu" style="margin-top: 40px;">
+	<div class="footer menu">
 		<ul>
 			<a href="../index.html"><li>HOME</li></a>
 			<a href="lunch.html"><li>LUNCH</li></a>
