added new announcement to menu top navbar

--- a/menu/appetizers+soup.html
+++ b/menu/appetizers+soup.html
@@ -23,6 +23,10 @@
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
 			</p>
 		</div>
+		<div class="nav-item"> 	
+			<a class="nav-icon" href="" style="background-image: url('../res/icons/svg/022-wallet.svg')"></a>
+			<p><u>10% OFF ALL PICK-UP ORDERS OVER $25 !!!</u></p>
+		</div>
 	</div>
 	<div id="main">
 		<p>[ MAIN ]</p>
