--- a/menu/pork+chicken.html
+++ b/menu/pork+chicken.html
@@ -7,7 +7,6 @@
 
 	<link href="menustyles.css" rel="stylesheet" type="text/css">
 	<link href="../styles.css" rel="stylesheet" type="text/css">
-	<script src="loose-scripts.js"></script>
 	<title>THE ORIENT</title>
 </head>
 <body>
@@ -24,6 +23,10 @@
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
 			</p>
+		</div>
+		<div class="nav-item"> 	
+			<a class="nav-icon" href="" style="background-image: url('../res/icons/svg/022-wallet.svg')"></a>
+			<p><u>10% OFF ALL PICK-UP ORDERS OVER $25 !!!</u></p>
 		</div>
 	</div>
 	<div id="main">
