fixed prices; index page update in progress

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div id="main">
-		<p>EST. 1978</p>
+		<p>EST. 1979</p>
 		<h1>THE ORIENT</h1>
 	</div>
 	<div class="menu">
@@ -28,8 +28,7 @@
 			<span> << &nbsp;</span> hi. we are yet another local asian restaurant. &nbsp; <span> >> </span> 
 		</h1>
 		<hr>
-		<p> Wait, this doesn't look like a website for a restaurant at all! <br> 
-			<br> We get that a lot. <br><br> But hey, why get stuck in the limbo? Go check out our <b>awesome menu</b> and give us a call!
+		<p id="blurb">Our kitchen is currently open for <b>TAKE-OUT only</b> during our usual business hours.  
 		</p>
 	</div>
 	<div id="aboutus">
