new updates page, nav bar texts, index page text

--- a/afternote.html
+++ b/afternote.html
@@ -20,6 +20,7 @@
 			<a href="menu/lunch.html"><li>LUNCH</li></a>
 			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
+			<a href="updates.html"><li>UPDATES</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
@@ -49,6 +50,7 @@
 			<a href="menu/lunch.html"><li>LUNCH SPECIAL</li></a>
 			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
+			<a href="updates.html"><li>UPDATES</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
