--- a/updates.html
+++ b/updates.html
@@ -5,13 +5,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" text="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet" text="text/css">
-	
+
 	<link href="styles.css" rel="stylesheet" type="text/css">
-	<title>THE ORIENT</title>
+	<title>CONTACT</title>
 </head>
 <body>
 	<div id="main">
-		<p>EST. 1978</p>
+		<p>[ UPDATES ]</p>
 		<h1>THE ORIENT</h1>
 	</div>
 	<div class="menu">
@@ -23,30 +23,21 @@
 			<a href="updates.html"><li>UPDATES</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
-	</div>
-	<div class="forminfo">
-		<div class="service-icon" style="background-image: url('res/icons/svg/020-notepad-1.svg')">
-		</div>
-		<div class="title">
-			<p>HELLO AGAIN</p>
-		</div>
-		<p>
-		this is the place to send us a quick anonymous note regarding almost anything.<br>
-		any feedback, suggestions, and bad puns are appreciated<br><br>
-		THANKS FOR VISITING US TODAY!
-		</p>
-	</div>
-	<form action="https://fncontact.com/THEORI/post" method="post" id="note-form">
-		<input type="hidden" name="url_success" value="http://theorientkelowna.com/afternote.html" /> 
-		<input type="hidden" name="url_error" value="http://theorientkelowna.com/nonafternote.html"/>
-		<input class="formtext" type="text" name="name" placeholder="[ name here ]" style="margin-bottom: 15px;"/>
-		<br>
-		<textarea class="formtext" name="message" rows="9" cols="80" class="input" placeholder="[ type type typing ... ]" style="margin-bottom: 10px;" required></textarea><br>
-		<button type="submit">SEND ME!</button>
-	</form>
+    </div>
+
+    <div id="updates">
+        <div class="update-card">
+			<p><b>{&nbsp; 2020-05-19 : Wednesday  &nbsp;}</b></p>
+			<p>
+				With Phase 2 just started this week, we are currently planning out what our updated dining area set-up would look like as well as implementing new social distancing measures needed to provide dine-in service. In the meantime, we will be continuing with take-out only service. <br><br>
+				We would like to thank you again for your continued support and are already looking forward to posting new updates here!
+			</p>
+        </div>
+    </div>
+
 	<div class="footer menu">
-		<ul>
-			<a href="index.html"><li>HOME</li></a>
+	    <ul>
+		    <a href="index.html"><li>HOME</li></a>
 			<a href="menu/lunch.html"><li>LUNCH SPECIAL</li></a>
 			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
@@ -58,4 +49,3 @@
 		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
 </body>
-</html>
