--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
 			<a href="menu/lunch.html"><li>LUNCH</li></a>
 			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
+			<a href="updates.html"><li>UPDATES</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
@@ -52,6 +53,7 @@
 			<a href="menu/lunch.html"><li>LUNCH SPECIAL</li></a>
 			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
+			<a href="updates.html"><li>UPDATES</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
