--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
 			<a href="menu/lunch.html"><li>LUNCH</li></a>
 			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
+			<a href="updates.html"><li>UPDATES</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
 	<div id="intro">
 		<h1 style="font-family: 'Oswald', sans-serif;">
-			<span> << &nbsp;</span> hi. we are yet another local asian restaurant. &nbsp; <span> >> </span> 
+			<span> << &nbsp;</span> hi. this local asian restaurant is still <span>open</span> and <span>kickin' it&nbsp; >> </span>
 		</h1>
 		<hr>
-		<p id="blurb">Our kitchen is currently open for <b>TAKE-OUT only</b> during our usual business hours.  
+		<p id="blurb">Our kitchen is currently open for <b>TAKE-OUT service only</b> during our regular business hours.<br><br>
+			~ We thank you for continuing to support your local businesses and community ~
 		</p>
 	</div>
 	<div id="aboutus">
@@ -62,10 +64,10 @@
 			<div class="service-icon" style="background-image: url('res/icons/svg/002-delivery-1.svg'); 
 			 background-size: 58px;">
 			 </div>
-			<h1> DELIVERY </h1>
-			<p>Delivery service from <b> 4pm - 8pm </b> every day! Obtain some fantastic chow without leaving the house!</p>
-			<form action="contact.html">
-				<button>&#9655; &nbsp; CONTACT US</button>
+			<h1> UPDATES </h1>
+			<p>We are keeping a keen eye on the COVID-19 pandemic. Click HERE to tune into our updates and upcoming changes.</p>
+			<form action="updates.html">
+				<button>&#9655; &nbsp; HERE :)</button>
 			</form>
 		</div>
 	</div>
@@ -93,9 +95,10 @@
 	<div class="footer menu">
 		<ul>
 			<a href="index.html"><li>HOME</li></a>
-			<a href="menu/lunch"><li>LUNCH SPECIAL</li></a>
+			<a href="menu/lunch.html"><li>LUNCH SPECIAL</li></a>
 			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
+			<a href="updates.html"><li>UPDATES</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
