updated index page styles, menu nav bar

--- a/menu/chopsuey+eggfooyung.html
+++ b/menu/chopsuey+eggfooyung.html
@@ -132,6 +132,7 @@
 			<a href="lunch.html"><li>LUNCH</li></a>
 			<a href="appetizers+soup.html"><li>MENU</li></a>
 			<a href="../contact.html"><li>CONTACT</li></a>
+			<a href="../updates.html"><li>UPDATES</li></a>
 			<a href="../note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
