menu fix; removed text symbols; small css adjustments

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 	</div>
 	<div id="intro">
 		<h1 style="font-family: 'Oswald', sans-serif;">
-			<span> << &nbsp;</span> hi. this local asian restaurant is still <span>open</span> and <span>kickin' it&nbsp; >> </span>
+			hi. this local asian restaurant is still <span>open</span> and <span>kickin' it&nbsp;</span>
 		</h1>
 		<hr>
-		<p id="blurb">Our kitchen is currently open for <b>TAKE-OUT service only</b> during our regular business hours.<br><br>
+		<p id="blurb">Our kitchen is currently open for <b>[ TAKE-OUT service only ]</TAKE-OUT></b> during our usual business hours.<br><br>
+			Please check out the UPDATES page for the latest information and any pending changes!<br>
 			~ We thank you for continuing to support your local businesses and community ~
 		</p>
 	</div>
@@ -38,7 +39,7 @@
 			<p> a little blurb about us </p>
 		</div>
 		<p id="blurb"> 
-			<b>THE ORIENT</b> is a local family restaurant that first opened in Kelowna, BC in 1979. Currently run by the second generation, we think that we are pretty good at cooking up delicious and satisfying meals after 39 years of practice!
+			<b>THE ORIENT</b> is a local family restaurant that first opened in Kelowna, BC in 1979. Currently run by the second generation, we think that we are pretty good at cooking up delicious and satisfying meals after 41 years of practice!
 		</p>
 	</div>
 	<div class="services">
