--- a/menu/chopsuey+eggfooyung.html
+++ b/menu/chopsuey+eggfooyung.html
@@ -121,6 +121,7 @@
 			<div class="column">
 				<div class="last item" >
 					<p>EGG FOO YUNG <span>$10.95</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / MUSHROOM / PORK / SHRIMP / VEGGIE </strong> <br><br>
 					<p class="desc">pan-fried egg pancake + topping of choice </p>
 				</div>
 			</div>
