fixed menu bar issue

--- a/afternote.html
+++ b/afternote.html
@@ -14,7 +14,7 @@
 		<p>EST. 1978</p>
 		<h1>THE ORIENT</h1>
 	</div>
-	<div class="menu">
+	<div class="menu" id="regularmenu">
 		<ul>
 			<a href="index.html"><li>HOME</li></a>
 			<a href="menu/lunch.html"><li>LUNCH</li></a>
